# nand-2-tetris

./: Cargo.toml
assembler/: Cargo.toml
assembler/src/: assembler.rs  main.rs
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/tokenizer/: char_reader.rs  errors.rs  mod.rs
cpu-emulator/: Cargo.toml
cpu-emulator/src/: hack_comp.rs  main.rs
src/: assembler.rs  encoder.rs  main.rs  parser.rs
vm-translator/: Cargo.toml
vm-translator/doc/: translations.md  translations.txt
vm-translator/src/: cli.rs  coder.rs  errors.rs  main.rs  parser.rs  tokenizer.rs
