[package]
name = "n2t-assembler"
authors = ["Ian Murfin - github.com/ianmurfinxyz"]
description = "Nand2Tetris Hack lang assembler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "n2tasm"
path = "src/main.rs"

[dependencies]
enum-iterator = "1.4.0"
clap = { version = "4.0", features = ["derive"]}
